fix: overflow issue on small devices

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -324,6 +324,7 @@ main {
 
   .left-container {
     height: calc(100vh - #{$navbarHeight + $footerHeight});
+    overflow-y: auto;
     padding: 0 20px;
     width: #{100% - $historyWidth};
 
